# paper-review-rhofold

./: .gitignore  README.md  pyproject.toml
main/: README_pretrain.md  demo_interpretability.py  load_rhofold_weights.py  rna_interpretability_analysis.py  rna_transformer_examples.py  rna_transformer_interpretability.py  scratch.py
main/archive/: 3d-rna-rhofold.ipynb  pretrain_rna_fm.py
src/: test.py
