[project]
name = "paper-review-rhofold"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.85",
    "ipykernel>=6.29.5",
    "kaggle>=1.7.4.5",
    "numpy>=2.2.6",
    "polars>=1.30.0",
    "torch>=2.7.0",
]
